--- a/views/user/ordertracking.ejs
+++ b/views/user/ordertracking.ejs
@@ -318,12 +318,7 @@
                         text: 'There was an issue processing your payment.',
                         icon: 'error',
                         confirmButtonText: 'OK'
-                    }).then(() => {
-                        document.getElementById("pay").value = "paymentPending";
-                        document.getElementById("orderform").action = `/reOrder/${myOrder}`;
-                        document.getElementById("orderform").method = "post";
-                        document.getElementById("orderform").submit();
-                    });
+                    })
                 });
 
                 rzp1.open();
@@ -377,52 +372,51 @@
             } else if (selectedPayment.value == 'wallet') {
                 const amt = document.getElementById("total").textContent;
                 const amount = parseFloat(amt);
+                console.log(amt);
+                try {
+                    const response = await fetch('/wallettransaction', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify({
+                            amount: amount
+                        })
+                    });
 
-                document.getElementById("placeOrderBtn").addEventListener('click', async () => {
-                    try {
-                        const response = await fetch('/wallettransaction', {
-                            method: 'POST',
-                            headers: {
-                                'Content-Type': 'application/json'
-                            },
-                            body: JSON.stringify({
-                                amount: amount
-                            })
-                        });
-
-                        if (!response.ok) {
-                            throw new Error('Network response was not ok');
-                        }
-
-                        const data = await response.json();
-                        console.log(data);
-
-                        if (data.success) {
-                            document.getElementById("orderform").method = "post";
-                            document.getElementById("orderform").action = `/reOrder/${myOrder}`;
-                            document.getElementById("pay").value = "wallet";
-                            document.getElementById("wallet").value = amount;
-                            document.getElementById("orderform").submit();
-                        } else {
-                            Swal.fire({
-                                text: "You Don't have Enough money in Wallet",
-                                icon: 'error',
-                                confirmButtonText: 'OK',
-                                customClass: {
-                                    title: 'text-danger',
-                                    popup: 'swal2-popup-custom',
-                                    confirmButton: 'btn btn-danger'
-                                },
-                                showCancelButton: false,
-                                showCloseButton: true,
-                                showLoaderOnConfirm: false,
-                                timer: 3000
-                            });
-                        }
-                    } catch (error) {
-                        console.error('An error occurred:', error);
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok');
                     }
-                });
+
+                    const data = await response.json();
+                    console.log(data);
+
+                    if (data.success) {
+                        document.getElementById("orderform").method = "post";
+                        document.getElementById("orderform").action = `/reOrder/${myOrder}`;
+                        document.getElementById("pay").value = "wallet";
+                        document.getElementById("wallet").value = amount;
+                        document.getElementById("orderform").submit();
+                    } else {
+                        Swal.fire({
+                            text: "You Don't have Enough money in Wallet",
+                            icon: 'error',
+                            confirmButtonText: 'OK',
+                            customClass: {
+                                title: 'text-danger',
+                                popup: 'swal2-popup-custom',
+                                confirmButton: 'btn btn-danger'
+                            },
+                            showCancelButton: false,
+                            showCloseButton: true,
+                            showLoaderOnConfirm: false,
+                            timer: 3000
+                        });
+                    }
+                } catch (error) {
+                    console.error('An error occurred:', error);
+                }
+               
             }
         }
     </script>
