--- a/views/admin/updateProduct.ejs
+++ b/views/admin/updateProduct.ejs
@@ -59,9 +59,11 @@
       </div>
       <div class="mb-3">
         <label for="description" class="form-label">Images:</label>
-        <% product.image.forEach(item=>{ %>
+        <% if(product.image&&product.image.length>0){ %>
+          <% product.image.forEach(item=>{ %>
           <img style=" width: 100px;height: 100px;" src="/<%= item %>">
           <% }) %>
+        <% } %>
       </div>
       <a href="/admin/editImage/<%= product._id %>" class="btn btn-danger btn-xs">Edit Images</a>
       <button type="submit" class="btn btn-primary">Submit</button>
